feat(api): :sparkles: extend specs and controllers to support pagination for workflows
